changement d'element html et css de la partit Titre-search

--- a/index.html
+++ b/index.html
@@ -26,27 +26,30 @@
                 </ul>
             </nav>
         </header>    
-        <section class="search-bar/filtre">
-                <h3>votre hébergement pour des vacances de rêve</h3> 
-                <P>plein centre ville ou en pleine nature</P>
+        <section class="search-bar/filtre"> 
+                    <div class="titre-search"> 
+                        <h3>Trouver votre hébergement pour des vacances de rêve</h3> 
+                        <p>En plein centre ville ou en pleine nature</p> 
+                    </div>
                     <div class="search">
                         <div class="icon-left"><i class="fas fa-map-marker-alt fa-xs"></i></div>  
                         <input class="searchbar" type="search" id="search-bar" name="q" placeholder="Marseille,France">
-                        <div class="icon-right"><a href="#">recherche</a></div>
+                        <div class="icon-right"><a href="#">Rechercher</a></div>
                     </div>
             
                     <div class="filtre">
-                        <button class="btn-filtre"> <i class="fas fa-dog">Animaux autorisés</i> </button>
-                        <button class="btn-filtre"> <i class="fas fa-child">Familial</i> </button>
-                        <button class="btn-filtre"> <i class="fas fa-heart">Romantique</i> </button>
-                        <button class="btn-filtre"> <i class="fas fa-money-bill-wave">Economique</i> </button>
+                        <span>filtre</span>
+                        <span><i class="fas fa-dog"></i>Animaux autorisé</span>
+                        <span><i class="fas fa-child"></i>Familial</span> 
+                        <span><i class="fas fa-heart"></i>Romantique</span> 
+                        <span><i class="fas fa-money-bill-wave"></i>Economique</span>
                     </div>
                     <div class="info">
                         <i class="fas fa-info-circle">Plus de 500 logements sont disponibles dans cette ville</i>
                     </div>
         </section>  
-        <section class="hebergement">
-            <H3>Hébergements à Marseille</H3>
+        <section class="hebergement" id="hebergement">
+            <h3>Hébergements à Marseille</h3>
             <div class="card"><a href="#"><img src="images/hebergements/aubergelacannebiere.jpg" alt="img-aubergelacannebiere"></a>
                 <div class="card-accomadation">
                     <h4>Auberge la cannebière</h4><br>
@@ -152,19 +155,19 @@
                 </div>
             </aside>
         </section>
-        <section class="activite">
+        <section class="activite" id="activite">
             <h3>Activités à Marseille</h3>
             <div class="card"><a href="#"><img src="images/activites/Vieux Port.jpg" alt="img-vieux-port"></a>
                 <div class="card-activiter">
                     <h4>Vieux Port</h4>
                 </div>
             </div>
-            <div class="card"><a href="#"><img src="images/activites/Fort de Pomègues.jpg" alt="img-fortdepomegues"></a>
+            <div class="card"><a href="#"><img src="images/activites/Fort de Pomègues.jpg" alt="img-fortdepomegues"></a>
                 <div class="card-activiter">
                     <h4>Fort de Pomègues</h4>
                 </div>
             </div>
-            <div class="card"><a href="#"><img src="images/activites/Îles du Frioul.jpg" alt="img-ilesdufrioul"></a>
+            <div class="card"><a href="#"><img src="images/activites/Îles du Frioul.jpg" alt="img-ilesdufrioul"></a>
                 <div class="card-activiter">
                     <h4>Îles du Frioul</h4>
                 </div>
