restructuration de mon index.html

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <nav class="header-nav">
 			    <ul>  
     			    <li><a href="#hebergement">Hébergements</a></li>
-                    <li><a href="#activite">Activités</li></a>
-                    <li class="inscription"><a href="#">S'inscire</li></a>
+                    <li><a href="#activite">Activités</a></li>
+                    <li class="inscription"><a href="#">S'inscire</a></li>
                 </ul>
             </nav>
         </header>    
-        <section class="search-bar/filtre"> 
+        <section class="search-bar"> 
                     <div class="titre-search"> 
                         <h3>Trouver votre hébergement pour des vacances de rêve</h3> 
                         <p>En plein centre ville ou en pleine nature</p> 
@@ -36,178 +36,40 @@
                         <input class="searchbar" type="search" id="search-bar" name="q" placeholder="Marseille,France">
                         <div class="icon-right"><a href="#">Rechercher</a></div>
                     </div>
-            
-                    <div class="filtre">
-                        <span>filtre</span>
-                        <span><i class="fas fa-dog"></i>Animaux autorisé</span>
-                        <span><i class="fas fa-child"></i>Familial</span> 
-                        <span><i class="fas fa-heart"></i>Romantique</span> 
-                        <span><i class="fas fa-money-bill-wave"></i>Economique</span>
-                    </div>
-                    <div class="info">
-                        <i class="fas fa-info-circle">Plus de 500 logements sont disponibles dans cette ville</i>
-                    </div>
-        </section>  
-        <section class="hebergement" id="hebergement">
-            <h3>Hébergements à Marseille</h3>
-            <div class="card"><a href="#"><img src="images/hebergements/aubergelacannebiere.jpg" alt="img-aubergelacannebiere"></a>
-                <div class="card-accomadation">
-                    <h4>Auberge la cannebière</h4><br>
-                    <p>Nuit à partir de 25€</p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/hebergements/hotelduport.jpg" alt="img-hotelduport"></a>
-                <div class="card-accomadation">
-                    <h4>Hôtel du port</h4><br>
-                    <p>Nuit à partir de 52€</p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/hebergements/hotellesmouettes.jpg" alt="img-hotellesmouettes"></a>
-                <div class="card-accomadation">
-                    <h4>Hôtel les mouettes</h4><br>
-                    <p>Nuit à partir de 76€</p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/hebergements/hoteldelamer.jpg" alt="img-hoteldelamer"></a>
-                <div class="card-accomadation">
-                    <h4>Hôtel de la mer</h4><br>
-                    <p>Nuit à partir de 46€</p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/hebergements/aubergelepanier.jpg" alt="img-aubergelepanier"></a>
-                <div class="card-accomadation">
-                    <h4>Auberge le panier</h4><br>
-                    <p>Nuit à partir de 23€</p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/hebergements/hotelchezamina.jpg" alt="img-hotelchezamina"></a>
-                <div class="card-accomadation">
-                    <h4>Hôtel chez Amina</h4><br>
-                    <p>Nuit à partir de 96€</p>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <button>Afficher plus</button>
-
-            <aside class="hebergement-populaire">
-                <h3>Les plus populaires</h3><i class="fas fa-chart-line"></i>
-                <div class="card"><a href="#"><img src="images/hebergements/hotellesoleil.jpg" alt="img-hotellesoleil"></a>
-                    <div class="card-populaire">
-                    <h4>Hôtel le soleil du matin</h4><br>
-                        <p>Nuit à partir de 128€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="card"><a href="#"><img src="images/hebergements/aucoeurdeleau.jpg" alt="img-aucoeurdeleau"></a>
-                    <div class="card-populaire">
-                        <h4>Au cœur de l'eau chambres d'hôtes</h4><br>
-                        <p>Nuit à partir de 71€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-                <div class="card"><a href="#"><img src="images/hebergements/hoteltoutbleu.jpg" alt="img-hoteltoutbleu"></a>
-                    <div class="card-populaire">
-                        <h4>Hôtel tout bleu et blanc</h4><br>
-                        <p>Nuit à partir de 68€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </div>
-            </aside>
         </section>
-        <section class="activite" id="activite">
-            <h3>Activités à Marseille</h3>
-            <div class="card"><a href="#"><img src="images/activites/Vieux Port.jpg" alt="img-vieux-port"></a>
-                <div class="card-activiter">
-                    <h4>Vieux Port</h4>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/activites/Fort de Pomègues.jpg" alt="img-fortdepomegues"></a>
-                <div class="card-activiter">
-                    <h4>Fort de Pomègues</h4>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/activites/Îles du Frioul.jpg" alt="img-ilesdufrioul"></a>
-                <div class="card-activiter">
-                    <h4>Îles du Frioul</h4>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/activites/Parc National des Calanques.jpg" alt="img-parcnationaldescalanques"></a>
-                <div class="card-activiter">
-                    <h4>Parc National des Calanques</h4>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="img-notredamedelagarde"></a>
-                <div class="card-activiter">
-                    <h4>Notre Dame de la Garde</h4>
-                </div>
-            </div>
-            <div class="card"><a href="#"><img src="images/activites/Parc Longchamp.jpg" alt="img-parclonchamp"></a>
-                <div class="card-activiter">
-                    <h4>Parc Longchamp</h4>
-                </div>
-            </div>
-
+        <section class="filtre">
+            <div>filtre</div>
+            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-money-bill-wave"></i></div></span>Économique<span></div>
+            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-child"></i></div><span>Familial</span></div>
+            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-heart"></i></div><span>Romantique</span></div>
+            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-dog"></i></div><span>Animaux autorisés</span></div>
         </section>
-        <footer>
-            <div class="a-propos">
-                <h4>A propos</h4>
-                <p>Fonctionnement du site</p><br>
-                <p>Conditions générales de vente</p><br>
-                <p>Données et confidentialité</p>
+        <section class="block-info">
+            <div class="block-info-icon">
+                <i class="fas fa-info fa-xs"></i> 
             </div>
-            <div class="nos-hebergements">
-                <h4>Nos hébergements</h4>
-                <p>Charte qualité</p><br>
-                <p>Soumettre votre hôtel</p>
+            <div class="block-info-text">
+                <span>Plus de 500 logements sont disponibles dans cette ville</span>
             </div>
-            <div class="assistance">
-                <h4>Assistance</h4>
-                <p>Centre d'aide</p><br>
-                <p>Nous contacter</p>
-            </div>
-        </footer>
-        
+        </section>
+                    <h3>Hébergements à Marseille</h3>
+        <section class="hebergement">
+            <div class="block-card-hebergement">
+                <div class="card">
+                    <div>
+                        <img class="block-img" src='images/hebergements/aubergelacannebiere.jpg'>
+                    </div>
+                    <div class="card-accomadation">
+                        <h4>Auberge la cannebière</h4><br>
+                        <p>Nuit à partir de 25€</p>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+            </div>   
+        </section>
     </div>
 </body>
-</html>
