--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet">
 
 
-    <title>Réservia</title>
+    <title>Réservia</title>    
 </head>
 <body>
     <div class="container">
-        <header>
+    <!--header de mon site Reservia-->
+        <header class="header-reservia">
             <div class="logo-desktop">
                 <img class="logo" src="images/logo/Reservia.svg" alt="Logo Reservia">
             </div> 
@@ -25,7 +26,8 @@
                     <li class="inscription"><a href="#">S'inscire</a></li>
                 </ul>
             </nav>
-        </header>    
+        </header>
+    <!--Section titre et filtre-->
         <section class="search-bar"> 
                     <div class="titre-search"> 
                         <h3>Trouver votre hébergement pour des vacances de rêve</h3> 
@@ -38,12 +40,13 @@
                     </div>
         </section>
         <section class="filtre">
-            <div>filtre</div>
+            <div class="filtre-text">Filtre</div>
             <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-money-bill-wave"></i></div></span>Économique<span></div>
             <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-child"></i></div><span>Familial</span></div>
             <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-heart"></i></div><span>Romantique</span></div>
             <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-dog"></i></div><span>Animaux autorisés</span></div>
         </section>
+    <!--Section pour l'icone info-->
         <section class="block-info">
             <div class="block-info-icon">
                 <i class="fas fa-info fa-xs"></i> 
@@ -52,23 +55,188 @@
                 <span>Plus de 500 logements sont disponibles dans cette ville</span>
             </div>
         </section>
-                    <h3>Hébergements à Marseille</h3>
+    <!--Section hebergement incluant div block hebergement et div herbergement populaire-->               
         <section class="hebergement">
             <div class="block-card-hebergement">
-                <div class="card">
-                    <div>
-                        <img class="block-img" src='images/hebergements/aubergelacannebiere.jpg'>
+                <div class="titre-hebergement">
+                    <h3>Hébergements à Marseille</h3>
+                </div>
+                <div class="conteneur-card-hebergement">
+                    <div class="card-hebergement">
+                        <div class="conteneur-img">
+                            <img class="img-hebergement" src='images/hebergements/aubergelacannebiere.jpg'>
+                        </div>
+                        <div class="conteneur-accomodation-hebergement">
+                            <div class="accomodation-hebergement-text">
+                                <h4>Auberge la cannebière</h4>
+                                <p>Nuit à partir de 25<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-hebergement-stars">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-accomadation">
-                        <h4>Auberge la cannebière</h4><br>
-                        <p>Nuit à partir de 25€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                    <div class="card-hebergement">
+                        <div class="conteneur-img">
+                            <img class="img-hebergement" src='images/hebergements/hotelduport.jpg'>
+                        </div>
+                        <div class="conteneur-accomodation-hebergement">
+                            <div class="accomodation-hebergement-text">
+                                <h4>Hotel du port</h4>
+                                <p>Nuit à partir de 52<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-hebergement-stars">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-hebergement">
+                        <div class="conteneur-img">
+                            <img class="img-hebergement" src='images/hebergements/hotellesmouettes.jpg'>
+                        </div>
+                        <div class="conteneur-accomodation-hebergement">
+                            <div class="accomodation-hebergement-text">
+                                <h4>Hotel Les mouettes</h4>
+                                <p>Nuit à partir de 76<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-hebergement-stars">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-hebergement">
+                        <div class="conteneur-img">
+                            <img class="img-hebergement" src='images/hebergements/hoteldelamer.jpg'>
+                        </div>
+                        <div class=conteneur-accomodation-hebergement"">
+                            <div class="accomodation-hebergement-text">
+                                <h4>Hotel de la mer</h4>
+                                <p>Nuit à partir de 46<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-hebergement-stars">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-hebergement">
+                        <div class="conteneur-img">
+                            <img class="img-hebergement" src='images/hebergements/aubergelepanier.jpg'>
+                        </div>
+                        <div class=conteneur-accomodation-hebergement"">
+                            <div class="accomodation-hebergement-text">
+                                <h4>Auberge Le panier</h4>
+                                <p>Nuit à partir de 23<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-hebergement-stars">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="uncolor"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-hebergement">
+                        <div class="conteneur-img">
+                            <img class="img-hebergement" src='images/hebergements/hotelchezamina.jpg'>
+                        </div>
+                        <div class="conteneur-accomodation-hebergement">
+                            <div class="accomodation-hebergement-text">
+                                <h4>Hotel chez Amina</h4>
+                                <p>Nuit à partir de 96<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-hebergement-stars">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div>
+                    <a href="#">Afficher plus</a>
+                </div>
+            </div>
+<!--block hebergement populaire-->
+            <div class="block-card-populaire">
+                    <div class="titre-populaire">
+                        <h3>Les plus populaires</h3>
+                        <span><i class="fas fa-chart-line"></i></span>
+                    </div>
+                        <div class="conteneur-card-populaire">
+                            <div class="card-populaire">
+                                <div class="block-img-populaire">
+                                    <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg">
+                                </div>
+                                <div class="accomodation-populaire">
+                                    <div class="accomodation-populaire-texte">
+                                        <h4>Hotel chez Amina</h4>
+                                        <p>Nuit à partir de 96<strong>€</strong></p>
+                                    </div>
+                                    <div class="accomodation-populaire-etoile">
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-populaire">
+                                <div class="block-img-populaire">
+                                    <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg">
+                                </div>
+                                <div class="accomodation-populaire">
+                                    <div class="accomodation-populaire-texte">
+                                        <h4>Hotel chez Amina</h4>
+                                        <p>Nuit à partir de 96<strong>€</strong></p>
+                                    </div>
+                                    <div class="accomodation-populaire-etoile">
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-populaire">
+                                <div class="block-img-populaire">
+                                    <img class="img-populaire" src="images/hebergements/hoteltoutbleu.jpg">
+                                </div>
+                                <div class="accomodation-populaire">
+                                    <div class="accomodation-populaire-texte">
+                                        <h4>Hotel chez Amina</h4>
+                                        <p>Nuit à partir de 96<strong>€</strong></p>
+                                    </div>
+                                    <div class="accomodation-populaire-etoile">
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
             </div>   
         </section>
     </div>
