finalisation de la partit desktop

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="#">Afficher plus</a>
+                    <a class="afficher-plus" href="#">Afficher plus</a>
                 </div>
             </div>
 <!--block hebergement populaire-->
@@ -239,5 +239,68 @@
                     </div>
             </div>   
         </section>
+
+<!--Partie Activiter de Reservia-->
+        
+        <section class="activite">
+            <div class="conteneur-activite">
+                <div><h3>Activités á Marseille</h3></div>
+                <div class="conteneur-card-activite">
+                    <div class="grand-element-1">
+                        <div class="card-1">
+                            <img class="img1" src="images/activites/Vieux Port.jpg" alt="photo du vieux port">
+                            <h4>Vieux Port</h4>
+                        </div>
+                        <div class="petit-element-2">
+                            <div class="card-2">
+                                <img class="img2" src="/images/activites/Fort de Pomègues.jpg" alt="photo du Fort de Pomegues">
+                                <h4>Fort de Pomegues</h4>
+                            </div>
+                            <div class="card-3">
+                                <img class="img3" src="/images/activites/Îles du Frioul.jpg" alt="photo du Frioul">
+                                <h4>Íles du Frioul</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grand-element-2">
+                        <div class="card-4">
+                            <img class="img4" src="/images/activites/Parc National des Calanques.jpg" alt="photo Parc National des Calanques">
+                            <h4>Parc National des Calanques</h4>
+                        </div>
+                        <div class="petit-element-2bis">
+                            <div class="card-5">
+                                <img class="img5" src="/images/activites/Notre-Dame-de-la-Garde.jpg" alt="Photo Notre-Dame-de-la-Garde">
+                                <h4>Photo Notre-Dame-de-la-Garde</h4>
+                            </div>
+                            <div class="card-6">
+                                <img class="img6" src="/images/activites/Parc Longchamp.jpg" alt=" photo du Parc Longchamp">
+                                <h4>Parc Longchamp</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>   
+
+        </section>
+        <footer>
+            <div class="conteneur-footer">
+                <div class="left">
+                    <h5 class="footer-title">A propos</h5>
+                    <span class="footer-text">Fonctionement du site</span><br>
+                    <span class="footer-text">Conditions générales de vente</span><br>
+                    <span class="footer-text">Donées et confidentialité</span><br>
+                </div>
+                <div class="middle">
+                    <h5 class="footer-title">Nos Hébergements</h5>
+                    <span class="footer-text">Charte qualité</span><br>
+                    <span class="footer-text">Soumettre votre hotel</span><br>
+                </div>
+                <div class="right">
+                    <h5 class="footer-title">Assitance</h5>
+                    <span class="footer-text">Centre d'aide</span><br>
+                    <span class="footer-text">Nous contacter</span><br>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
