Restructuration jusqu'a la partit info

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
         </header>
-    <!--Section titre et filtre-->
+    <!--Section Search et filtre-->
         <section class="search-bar"> 
                     <div class="titre-search"> 
                         <h3>Trouver votre hébergement pour des vacances de rêve</h3> 
@@ -40,11 +40,43 @@
                     </div>
         </section>
         <section class="filtre">
-            <div class="filtre-text">Filtre</div>
-            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-money-bill-wave"></i></div></span>Économique<span></div>
-            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-child"></i></div><span>Familial</span></div>
-            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-heart"></i></div><span>Romantique</span></div>
-            <div class="block-filtre"><div class="block-icon-filtre"><i class="fas fa-dog"></i></div><span>Animaux autorisés</span></div>
+            <div class="conteneur-filtre">
+                <div class="block-text-filtre">
+                    <span>Filtre</span>
+                </div>
+                <div class="block-filtre">
+                    <div class="conteneur-icon-filtre">
+                        <i class="fas fa-money-bill-wave"></i>
+                    </div>
+                    <div class="conteneur-text-filtre">
+                        <span>Économique</span>
+                    </div>
+                </div>
+                <div class="block-filtre">
+                    <div class="conteneur-icon-filtre">
+                        <i class="fas fa-child"></i>
+                    </div>
+                    <div class="conteneur-text-filtre">
+                        <span>Familial</span>
+                    </div>
+                </div>
+                <div class="block-filtre">
+                    <div class="conteneur-icon-filtre">
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <div class="conteneur-text-filtre">
+                        <span>Romantique</span>
+                    </div>
+                </div>    
+                <div class="block-filtre">
+                    <div class="conteneur-icon-filtre">
+                        <i class="fas fa-dog"></i>
+                    </div>
+                    <div class="conteneur-text-filtre">
+                        <span>Animaux autorisés</span>
+                    </div> 
+                </div>
+            </div>
         </section>
     <!--Section pour l'icone info-->
         <section class="block-info">
@@ -177,66 +209,66 @@
             </div>
 <!--block hebergement populaire-->
             <div class="block-card-populaire">
-                    <div class="titre-populaire">
-                        <h3>Les plus populaires</h3>
-                        <span><i class="fas fa-chart-line"></i></span>
+                <div class="titre-populaire">
+                    <h3>Les plus populaires</h3>
+                    <span><i class="fas fa-chart-line"></i></span>
+                </div>
+                <div class="conteneur-card-populaire">
+                    <div class="card-populaire">
+                        <div class="block-img-populaire">
+                            <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg">
+                        </div>
+                        <div class="accomodation-populaire">
+                            <div class="accomodation-populaire-texte">
+                                <h4>Hotel chez Amina</h4>
+                                <p>Nuit à partir de 96<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-populaire-etoile">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
                     </div>
-                        <div class="conteneur-card-populaire">
-                            <div class="card-populaire">
-                                <div class="block-img-populaire">
-                                    <img class="img-populaire" src="images/hebergements/hotellesoleil.jpg">
-                                </div>
-                                <div class="accomodation-populaire">
-                                    <div class="accomodation-populaire-texte">
-                                        <h4>Hotel chez Amina</h4>
-                                        <p>Nuit à partir de 96<strong>€</strong></p>
-                                    </div>
-                                    <div class="accomodation-populaire-etoile">
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                    </div>
-                                </div>
+                    <div class="card-populaire">
+                        <div class="block-img-populaire">
+                            <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg">
+                        </div>
+                        <div class="accomodation-populaire">
+                            <div class="accomodation-populaire-texte">
+                                <h4>Hotel chez Amina</h4>
+                                <p>Nuit à partir de 96<strong>€</strong></p>
                             </div>
-                            <div class="card-populaire">
-                                <div class="block-img-populaire">
-                                    <img class="img-populaire" src="images/hebergements/aucoeurdeleau.jpg">
-                                </div>
-                                <div class="accomodation-populaire">
-                                    <div class="accomodation-populaire-texte">
-                                        <h4>Hotel chez Amina</h4>
-                                        <p>Nuit à partir de 96<strong>€</strong></p>
-                                    </div>
-                                    <div class="accomodation-populaire-etoile">
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                    </div>
-                                </div>
+                            <div class="accomodation-populaire-etoile">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
                             </div>
-                            <div class="card-populaire">
-                                <div class="block-img-populaire">
-                                    <img class="img-populaire" src="images/hebergements/hoteltoutbleu.jpg">
-                                </div>
-                                <div class="accomodation-populaire">
-                                    <div class="accomodation-populaire-texte">
-                                        <h4>Hotel chez Amina</h4>
-                                        <p>Nuit à partir de 96<strong>€</strong></p>
-                                    </div>
-                                    <div class="accomodation-populaire-etoile">
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                        <span class="color"><i class="fas fa-star fa-xs"></i></span>
-                                    </div>
-                                </div>
-                            </div>
+                        </div>
                     </div>
+                    <div class="card-populaire">
+                        <div class="block-img-populaire">
+                            <img class="img-populaire" src="images/hebergements/hoteltoutbleu.jpg">
+                        </div>
+                        <div class="accomodation-populaire">
+                            <div class="accomodation-populaire-texte">
+                                <h4>Hotel chez Amina</h4>
+                                <p>Nuit à partir de 96<strong>€</strong></p>
+                            </div>
+                            <div class="accomodation-populaire-etoile">
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                                <span class="color"><i class="fas fa-star fa-xs"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>   
         </section>
 
