--- a/test.html
+++ b/test.html
@@ -9,12 +9,91 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="filtre">
-        <div class="block"><span>filtre</span></div>
-        <div class="block"><span class="block-icon"><i class="fas fa-money-bill-wave"></i></span>Économique</div>
-        <div class="block"><span class="block-icon"><i class="fas fa-child"></i></span>Familial</div>
-        <div class="block"><span class="block-icon"><i class="fas fa-heart"></i>Romantique</span></div>
-        <div class="block"><span class="block-icon"><i class="fas fa-dog"></i>Animaux autorisés</span></div>
+    
+    <section id="activity">
+        <h2>Activités à Marseille</h2>
+        <div class="conteneur activiter">
+            <div class="child1">
+                <article>
+                    <a href="#">
+                        <figure class="large">
+                            <div>
+                                <img src="/images/activites/Vieux Port.jpg"alt="Photo de bateaux sur le port de Marseille"/>
+                            </div>
+                            <figcaption>
+                                <h3>Vieux Port</h3>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </article>
+            </div>
+            <div class="child2">
+                <article>
+                    <a href="#">
+                        <figure class="medium">
+                            <div>
+                                <img src="/images/activites/Fort de Pomègues.jpg"alt="Photo du Fort de Pomègues à Marseille" />
+                            </div>
+                            <figcaption>
+                                <h3>Fort de Pomègues</h3>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </article>
+                <article>
+                    <a href="#">
+                        <figure class="small">
+                            <div>
+                                <img src="/images/activites/Îles du Frioul.jpg" alt="Photo d'une longue vue pointant vers l'Îles du Frioul au large de Marseille"/>
+                            </div>
+                            <figcaption>
+                            <h3>Îles du Frioul</h3>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </article>
+            </div>
+            <div class="child3">
+                <article>
+                    <a href="#">
+                        <figure class="large">
+                            <div>
+                                <img src="/images/activites/Parc National des Calanques.jpg"alt="Photo du Parc National des Calanques "/>
+                            </div>
+                            <figcaption>
+                                <h3>Parc National des Calanques</h3>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </article>
+            </div>
+            <div class="child4">
+                <article>
+                    <a href="#">
+                        <figure class="small">
+                            <div>
+                                <img src="/images/activites/Notre-Dame-de-la-Garde.jpg"alt="Notre-Dame-de-la-Garde" />
+                            </div>
+                            <figcaption>
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </article>
+                <article>
+                    <a href="#">
+                        <figure class="small">
+                            <div>
+                                <img src="/images/activites/Parc Longchamp.jpg" alt="Parc Longchamps"/>
+                            </div>
+                            <figcaption>
+                            <h3>Parc Longchamps</h3>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </article>
+            </div>
+        </div>
     </section>
 
 
