finalistion du projet sans les box-shadow

--- a/index.html
+++ b/index.html
@@ -252,31 +252,31 @@
                 <div class="conteneur-activite">
                     <div class="child">
                         <div>
-                            <img class="img-large" src="/images/activites/Vieux Port.jpg" alt="vieux port">
+                            <img class="img-large" src="images/activites/Vieux Port.jpg" alt="vieux port">
                             <p>Vieux Port</p>
                         </div>
                     </div>
                     <div class="child2">
                         <div>
-                            <img class="img-medium" src="/images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
+                            <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
                             <p>Fort de Pomègues</p>
                         </div>
                         <div>
-                            <img class="img-small" src="/images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
+                            <img class="img-small" src="images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
                             <p>Îles du Frioul</p>
                         </div>
                     </div>
                     <div class="child">
-                        <img class="img-large" src="/images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
+                        <img class="img-large" src="images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
                         <p>Parc National des Calanques</p>
                     </div>
                     <div class="child2">
                         <div>
-                            <img class="img-small2" src="/images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
+                            <img class="img-small2" src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
                             <p>Notre-Dame-de-la-Garde</p>
                         </div>
                         <div>
-                            <img class="img-small2" src="/images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
+                            <img class="img-small2" src="images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
                             <p>Parc Longchamps</p>
                         </div>
                     </div>
