--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </section>
         <!--Section hebergement incluant div block hebergement et div herbergement populaire-->               
-            <section class="hebergement">
+            <section class="hebergement" id="#hebergement">
                 <div class="block-card-hebergement">
                     <div class="titre-hebergement">
                         <h3>Hébergements à Marseille</h3>
@@ -271,43 +271,51 @@
 
     <!--Partie Activiter de Reservia-->
             
-            <section class="activite">
+            <section class="activite" id="#activite">
                 <div class="titre-activiter">
                     <h3>Activite a Marseille</h3>
                 </div>
                 <div class="conteneur-activite">
-                    <div class="child">
-                        <div class="card-activite-large">
-                            <img class="img-large" src="images/activites/Vieux Port.jpg" alt="vieux port">
-                            <p>Vieux Port</p>
+                    <a href="#">
+                        <div class="child">
+                            <div class="card-activite-large">
+                                <img class="img-large" src="images/activites/Vieux Port.jpg" alt="vieux port">
+                                <p>Vieux Port</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="child2">
-                        <div class="card-activite">
-                            <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
-                            <p>Fort de Pomègues</p>
+                    </a>
+                    <a href="#">
+                        <div class="child2">
+                                <div class="card-activite">
+                                    <img class="img-medium" src="images/activites/Fort de Pomègues.jpg" alt="Fort de Pomègues">
+                                    <p>Fort de Pomègues</p>
+                                </div>
+                                <div class="card-activite">
+                                    <img class="img-small" src="images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
+                                    <p>Îles du Frioul</p>
+                                </div>
                         </div>
-                        <div class="card-activite">
-                            <img class="img-small" src="images/activites/Îles du Frioul.jpg" alt="Îles du Frioul">
-                            <p>Îles du Frioul</p>
+                    </a>
+                    <a href="#">
+                        <div class="child">
+                            <div class="card-activite-large">
+                                <img class="img-large" src="images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
+                                <p>Parc National des Calanques</p>
+                            </div>   
                         </div>
-                    </div>
-                    <div class="child">
-                        <div class="card-activite-large">
-                            <img class="img-large" src="images/activites/Parc National des Calanques.jpg" alt="Parc National des Calanques">
-                            <p>Parc National des Calanques</p>
-                        </div>   
-                    </div>
-                    <div class="child2">
-                        <div class="card-activite">
-                            <img class="img-small2" src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
-                            <p>Notre-Dame-de-la-Garde</p>
+                    </a>
+                    <a href="#">
+                        <div class="child2">
+                            <div class="card-activite">
+                                <img class="img-small2" src="images/activites/Notre-Dame-de-la-Garde.jpg" alt="Notre-Dame-de-la-Garde">
+                                <p>Notre-Dame-de-la-Garde</p>
+                            </div>
+                            <div class="card-activite">
+                                <img class="img-small2" src="images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
+                                <p>Parc Longchamps</p>
+                            </div>
                         </div>
-                        <div class="card-activite">
-                            <img class="img-small2" src="images/activites/Parc Longchamp.jpg" alt="Parc Longchamp">
-                            <p>Parc Longchamps</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </section>
             
