finalisation du projet

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="header-nav">
 			    <ul>  
     			    <li><a href="#hebergement">Hébergements</a></li>
-                    <li><a href="#activite">Activités</a></li>
+                    <li><a href="#activites">Activités</a></li>
                     <li class="inscription"><a href="#">S'inscire</a></li>
                 </ul>
             </nav>
@@ -97,7 +97,7 @@
                 </div>
             </section>
         <!--Section hebergement incluant div block hebergement et div herbergement populaire-->               
-            <section class="hebergement" id="#hebergement">
+            <section class="hebergement" id="hebergement">
                 <div class="block-card-hebergement">
                     <div class="titre-hebergement">
                         <h3>Hébergements à Marseille</h3>
@@ -271,7 +271,7 @@
 
     <!--Partie Activiter de Reservia-->
             
-            <section class="activite" id="#activite">
+            <section class="activite" id="activites">
                 <div class="titre-activiter">
                     <h3>Activite a Marseille</h3>
                 </div>
