--- a/index.html
+++ b/index.html
@@ -19,25 +19,23 @@
             <div class="logo-desktop">
                 <img class="logo" src="images/logo/Reservia.svg" alt="Logo Reservia">
             </div> 
-            <nav class="header-nav">
-			    <ul>  
-    			    <li><a href="#hebergement">Hébergements</a></li>
-                    <li><a href="#activites">Activités</a></li>
-                    <li class="inscription"><a href="#">S'inscire</a></li>
-                </ul>
+            <nav class="header-nav">  
+    			    <a class="link" href="#hebergement">Hébergements</a>
+                    <a class="link" href="#activites">Activités</a>
+                    <a class="register" href="#">S'inscire</a>
             </nav>
         </header>
         <main>
             <section class="search-bar"> 
-                        <div class="titre-search"> 
-                            <h3>Trouver votre hébergement pour des vacances de rêve</h3> 
-                            <p>En plein centre ville ou en pleine nature</p> 
-                        </div>
-                        <div class="search">
-                            <div class="icon-left"><i class="fas fa-map-marker-alt fa-xs"></i></div>  
-                            <input class="searchbar" type="search" id="search-bar" name="q" placeholder="Marseille,France">
-                            <div class="icon-right"><a href="#">Rechercher</a></div>
-                        </div>
+                <div class="titre-search"> 
+                    <h3>Trouver votre hébergement pour des vacances de rêve</h3> 
+                    <p>En plein centre ville ou en pleine nature</p> 
+                </div>
+                <div class="search">
+                    <div class="icon-left"><i class="fas fa-map-marker-alt fa-xs"></i></div>  
+                    <input class="searchbar" type="search" id="search-bar" name="q" placeholder="Marseille,France">
+                    <div class="icon-right"><a href="#">Rechercher</a></div>
+                </div>
             </section>
         
             <section class="filtre">
@@ -321,22 +319,22 @@
             
         </main>
         <footer>
-            <div class="conteneur-footer">
-                <div class="left">
-                    <h5 class="footer-title">A propos</h5>
-                    <span class="footer-text">Fonctionement du site</span><br>
-                    <span class="footer-text">Conditions générales de vente</span><br>
-                    <span class="footer-text">Donées et confidentialité</span><br>
+            <div class="container-footer">
+                <div class="footer-left">
+                    <h3 class="footer-h3">À propos</h3>
+                    <a class="footer-a" href="#">Fonctionnement du site</a>
+                    <a class="footer-a" href="#">Conditions générales de vente</a>
+                    <a class="footer-a" href="#">Donnéees et confidentialité</a>
                 </div>
-                <div class="middle">
-                    <h5 class="footer-title">Nos Hébergements</h5>
-                    <span class="footer-text">Charte qualité</span><br>
-                    <span class="footer-text">Soumettre votre hotel</span><br>
+                <div class="footer-middle">
+                    <h3 class="footer-h3">Nos hébergements</h3>
+                    <a class="footer-a" href="#">Charte qualité</a>
+                    <a class="footer-a" href="#">Soumettre votre hôtel</a>
                 </div>
-                <div class="right">
-                    <h5 class="footer-title">Assitance</h5>
-                    <span class="footer-text">Centre d'aide</span><br>
-                    <span class="footer-text">Nous contacter</span><br>
+                <div class="footer-right">
+                    <h3 class="footer-h3">Assistance</h3>
+                    <a class="footer-a" href="#">Centre d'aide</a>
+                    <a class="footer-a" href="#">Nous contacter</a>
                 </div>
             </div>
         </footer>
