search-bar et filtre de la partit mobile

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <div class="icon-left"><i class="fas fa-map-marker-alt fa-xs"></i></div>  
                     <input class="searchbar" type="search" id="search-bar" name="q" placeholder="Marseille,France">
                     <div class="icon-right"><a href="#">Rechercher</a></div>
+                    <div class="icon-right-mobile"><a href="#"><i class="fas fa-search fa-xs"></i></a></div>
                 </div>
             </section>
         
